--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= link_to "Home", root_path %>
-<%= link_to "About", pages_about_path %>
-<h1>Welcome to my first App!</h1>
-<p>Sign in <%= link_to "here", "http://www.google.com" %></p>
+<div class="jumbotron">
+	<h1>Welcome to my app!</h1>
+	Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>
+</div>
